<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="#26FFFFFF"
    android:backgroundTintMode="src_over"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:text="@string/fifa_worldcup_2018_quiz"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424242"
            android:padding="5dp"
            android:text="@string/Question1"
            android:textColor="#f5f5f5"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#26424242"
            android:orientation="vertical"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox1"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox2"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox3"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox4"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424242"
            android:padding="5dp"
            android:text="@string/Question2"
            android:textColor="#f5f5f5"
            android:textSize="22sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#26424242"
            android:orientation="vertical"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/radioButtonqQ11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonQ12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton2"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonQ13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton13"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonQ14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton4"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424242"
            android:padding="5dp"
            android:text="@string/Question3"
            android:textColor="#f5f5f5"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#26424242"
            android:hint="@string/hint1"
            android:inputType="text"
            android:padding="5dp"
            android:textColorHint="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424242"
            android:padding="5dp"
            android:text="@string/Question4"
            android:textColor="#f5f5f5"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#26424242"
            android:hint="@string/hint2"
            android:inputType="text"
            android:padding="5dp"
            android:textColorHint="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424242"
            android:padding="5dp"
            android:text="@string/Question5"
            android:textColor="#f5f5f5"
            android:textSize="22sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#26424242"
            android:orientation="vertical"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/radioButtonQ21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton5"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonQ22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton6"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonQ23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton7"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonQ24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton8"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="submit"
            android:layout_gravity="center"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>